--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="container">
     <header>
       <h1>Elise Chough</h1>
-      <p>Hi, my name is Elise Chough and welcome to my page! I am a 21-year-old Korean American and I was born in Philadelphia, Pennsylvania. I am currently a senior at the University of Miami and I am hoping to pursue a career within the beauty and or luxury marketing industry. Exploring fashion, music, and art have always been my passions and an escape from reality. I have a creative, bubbly personality, and I love to travel and try new things.</p>
+      <p>Hi, my name is Elise Chough and welcome to my page! I am a 21-year-old Korean American and I was born in Philadelphia, Pennsylvania. I am a recent graduate of the University of Miami with a bachelors degree in marketing. Exploring fashion, music, and art have always been my passions and an escape from reality. I have a creative personality and I love to travel and try new things.</p>
     </header>
 
     <main>
@@ -142,7 +142,7 @@
 
   
       <h3>My Resume</h3>
-      <p1><a href="https://docs.google.com/document/d/1LFymY6AdhBav-SziS1HhxgJLDLxBBaxF/edit?usp=share_link&ouid=112194613498964755441&rtpof=true&sd=true" target="_blank">Resume </a><p1>
+      <p1><a href="https://docs.google.com/document/d/1tkRPr1QSrX2889Vet6yP1sZMhfFKr7pc/edit" target="_blank">Resume </a><p1>
 
       <h4>My Portfolio</h4>
         <ul>
@@ -156,8 +156,7 @@
       <h5>Contact Information</h5>
       <ul>
         <li><b>Phone:</b> 215-630-1424</li>
-        <li><b>School email:</b> eac5133@miami.edu</li>
-        <li><b>Personal email:</b> elise.chough@gmail.com</li>
+        <li><b>Email:</b> elise.chough@gmail.com</li>
       </ul>
 
       <h6>Connect with me!</h6>
